# nix-flakes-meson-git

./: derivation.nix  flake.nix  meson.build
subprojects/: zmqd.wrap
subprojects/packagefiles/zmqd/: meson.build
